--- a/action.yml
+++ b/action.yml
@@ -1,45 +1,26 @@
 name: 'publish metadata and artifacts with hc-releases'
 description: 'Use hc-releases to create metadata and upload files.'
 inputs:
-  private-tools-token:
-    description: 'Github PAT with permission to download bob and hc-releases'
-    required: true
   product-name:
     description: 'Product name'
     required: true
   version:
     description: 'Product version'
     required: true
-  hc_releases_host:
+  hc-releases-host:
     description: 'hc releases host'
     required: true
-  hc_releases_key:
+  hc-releases-key:
     description: 'hc releases api key'
     required: true
-  zip-dir:
-    description: 'Directory containing the artifacts to add to the build metadata'
-    required: false
-    default: 'dist/zips'
-  metadatafile:
-    description: 'Release metadatafile'
+  metadata-file:
+    description: 'Release metadatafile. This file should contain any static metadata.'
     required: false
     default: '.release/release-metadata.hcl'
-  artifact-dir:
-    description: 'Artifact directory'
-    required: false
-    default: 'dist/all-artifacts'
 
 runs:
   using: "composite"
   steps:
-      - uses: hashicorp/action-setup-bob@v1
-        with:
-          github-token: "${{ inputs.private-tools-token }}"
-          version: "0.0.22-beta1"
-      - name: Setup hc-releases
-        uses: hashicorp/actions-setup-hc-releases@v1
-        with:
-          github-token: "${{ inputs.private-tools-token }}"
       - name: Set required repo name env var
         shell: bash
         run: echo "REPO_NAME=$(echo ${{ github.repository }} | cut -f2 -d "/")" >> $GITHUB_ENV
@@ -48,29 +29,15 @@ runs:
         run: |
           VERSION="${{ inputs.version }}"
           echo "VERSION=$(echo "${VERSION//v}")" >> $GITHUB_ENV
-      - name: convert hcl to json
-        shell: bash
-        run: |
-          curl -SsL https://github.com/kvz/json2hcl/releases/download/v0.0.6/json2hcl_v0.0.6_linux_amd64 \
-          | sudo tee /usr/local/bin/json2hcl > /dev/null && sudo chmod 755 /usr/local/bin/json2hcl && json2hcl -version
-          json2hcl -reverse < "${{ inputs.metadatafile }}" > meta.json
-      - name: generate release metadata
+      - name: Create Release metadata
         shell: bash
         env:
-          HC_RELEASES_HOST: "${{ inputs.hc_releases_host }}"
-          HC_RELEASES_KEY: "${{ inputs.hc_releases_key }}"
+          HC_RELEASES_HOST: ${{ inputs.hc-releases-host }}
+          HC_RELEASES_KEY: ${{ inputs.hc-releases-key }}
+          VERSION: ${{ env.VERSION }}
+          METADATA_FILE: ${{ inputs.metadata-file }}
         run: |
-          bob generate-release-metadata -metadata-file "meta.json" \
-          -in-dir "${{ inputs.zip-dir }}" -out-file "release-metadata-final.json" \
-          -branch "${{ github.ref_name }}" -org "${{ github.repository_owner }}" \
-          -repo "${{env.REPO_NAME}}" -version "${{ env.VERSION }}"
-      - name: publish artifacts
-        shell: bash
-        env:
-          HC_RELEASES_HOST: "${{ inputs.hc_releases_host }}"
-          HC_RELEASES_KEY: "${{ inputs.hc_releases_key }}"
-        run: |
-          cat release-metadata-final.json
-          bob publish release -product-name "${{ inputs.product-name }}" \
-          -version "${{ env.VERSION }}" -metadata-file "release-metadata-final.json" \
-          -in-dir "${{ inputs.artifact-dir }}"
+          hc-releases metadata create -product "${{ inputs.product-name }}"" \
+          -add /version='"$VERSION"' \
+          -add /url_changelog='"https://github.com/${{ github.repository }}/blob/$VERSION/CHANGELOG.md"' \
+          -input "$METADATA_FILE"
