--- a/action.yml
+++ b/action.yml
@@ -53,8 +53,8 @@ runs:
           METADATA_FILE: ${{ inputs.metadata-file }}
           PRODUCT_NAME: ${{ inputs.product-name }}
           REPO: ${{ github.repository }}
-          ARTIFACT_DIR: ${{ inputs.artifact_dir }}
-          BUILD_ARTIFACTS: ${{ inputs.build_artifacts }}
+          ARTIFACT_DIR: ${{ inputs.artifact-dir }}
+          BUILD_ARTIFACTS: ${{ inputs.build-artifacts }}
         run: |
           ${{ github.action_path }}/scripts/generate-metadata.sh
       - name: Publish Release Metadata
