Handle secondary signing files
Bob now handles all release artifact types, and will conditionally create a
secondary signing file if not present on disk. This necessitates passing the
entire artifact directory to bob.

This PR also deprecates the `build-artifacts` actions.yml configuration as it
is no longer needed with the changes to `bob`.

Signed-off-by: Scott Macfarlane <smacfarlane@hashicorp.com>

--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ inputs:
     required: false
     default: 'dist'
   build-artifacts:
-    description: 'Build artifact file extensions - space separated list. These files will get added to the build metadata.'
+    description: '(Deprecated) Build artifact file extensions - space separated list. These files will get added to the build metadata.'
     required: false
     default: 'zip'
 runs:
